# PyPfaffian

./: LICENSE  README.md  pyproject.toml
py_pfaffian/jax/: pfaffian.py  utils.py
py_pfaffian/torch/: __init__.py  pfaffian.py  utils.py
tests/: conftest.py
tests/jax/: test_correctness.py  test_derivatives.py
tests/joint/: test_joint_correctness.py
tests/torch/: test_derivative.py  test_torch_correctness.py
